--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "babel-loader": "^6.2.7",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-latest": "^6.16.0",
+    "flow-bin": "^0.36.0",
     "webpack-dev-server": "1.16.2"
   },
   "scripts": {
     "start": "webpack-dev-server --content-base build/",
+    "flow": "flow; test $? -eq 0 -o $? -eq 2",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Mirko",
