--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,9 @@
 {
-    "presets": ["latest"],
-    "plugins": ["transform-decorators-legacy", "transform-flow-strip-types"]
+    "presets": [
+        "latest"
+    ],
+    "plugins": [
+        "transform-decorators-legacy"
+        /* ,"transform-flow-strip-types"*/
+    ]
 }
